--- a/prov_app_with_pm2.yaml
+++ b/prov_app_with_pm2.yaml
@@ -61,3 +61,74 @@
       args:
         chdir: /home/ubuntu/repo/app/  # Sets the working directory to the application folder
       # Starts the app in the specified directory using pm2
+
+
+---
+- name: Provision Node.js application
+  hosts: web
+  become: yes
+  gather_facts: no
+
+  tasks:
+  - name: Update apt repository and cache
+    apt:
+      update_cache: yes
+      force_apt_get: yes
+      cache_valid_time: 3600
+
+  - name: Install NodeSource Node.js 20.x repository
+    ansible.builtin.shell: |
+      curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+
+  - name: Install Node.js and npm
+    apt:
+      name: nodejs
+      state: present
+
+  - name: Install PM2
+    npm:
+      name: pm2
+      global: yes
+      state: present
+
+  - name: Clone the app repository to the controller node
+    delegate_to: localhost
+    ansible.builtin.git:
+      repo: 'https://github.com/IlhaanHasssan/tech264-sparta-app.git'
+      dest: /home/ubuntu/repo
+      version: main
+
+  - name: Copy app folder to target node
+    ansible.builtin.copy:
+      src: /home/ubuntu/repo/
+      dest: /home/ubuntu/repo/
+      mode: '0755'
+
+  - name: Install packages based on package.json
+    community.general.npm:
+      path: /home/ubuntu/repo/app/
+
+  - name: Install NGINX
+    apt:
+      name: nginx
+      state: present
+
+  - name: Configure NGINX to act as a reverse proxy
+    ansible.builtin.shell: |
+      sudo sed -i 's|try_files $uri $uri/ =404;|proxy_pass http://localhost:3000;|' /etc/nginx/sites-available/default
+
+  - name: Restart NGINX to apply configuration
+    service:
+      name: nginx
+      state: restarted
+
+  - name: Start the application using pm2
+    ansible.builtin.shell: pm2 start app.js
+    args:
+      chdir: /home/ubuntu/repo/app/
+
+  - name: Start the application using pm2 if not already running
+    shell: |
+      if ! pm2 list | grep -q "app"; then
+        pm2 start app.js
+      fi
