--- a/scripts/prov_app_with_pm2.yaml
+++ b/scripts/prov_app_with_pm2.yaml
@@ -45,7 +45,7 @@
       ansible.builtin.lineinfile:
         path: /etc/environment       # Path to the environment file
         regexp: '^DB_HOST='          # Regex to find existing DB_HOST entry
-        line: 'DB_HOST=mongodb://172.31.23.188:27017' # New DB_HOST value, should be db private IP
+        line: 'DB_HOST=mongodb://172.31.25.66:27017' # New DB_HOST value, should be db private IP
         state: present               # Ensures the line is present
 
     # Source environment variables to make them available
@@ -60,7 +60,7 @@
         mode: '0755'                 # Sets permissions to read, write, and execute for owner; read and execute for others
 
     # Install npm packages based on the package.json file in the application folder
-    - name: Install packages based on package.json
+    - name: Install npm packages based on package.json
       community.general.npm:
         path: /home/ubuntu/repo/app/  # Directory where the package.json is located
       # Installs npm dependencies required for the application
@@ -83,17 +83,17 @@
         name: nginx
         state: restarted            # Ensures NGINX is restarted
 
-    # Start the application using pm2
-    - name: Start the application using pm2
-      ansible.builtin.shell: pm2 start app.js
+    - name: Stop all PM2 processes (if any are running)
+      ansible.builtin.shell: pm2 stop all || true
+      ignore_errors: yes        
       args:
         chdir: /home/ubuntu/repo/app/  # Sets the working directory to the application folder
 
-    # Start the application using pm2 only if it's not already running
+    # Ensure the application is running with pm2; start if not already running
     - name: Start the application using pm2 if not already running
       shell: |
-        if ! pm2 list | grep -q "app"; then
-          pm2 start app.js
+        if ! pm2 list | grep -q "app.js"; then
+         -E pm2 start app.js
         fi
       args:
         chdir: /home/ubuntu/repo/app/
